--- a/home.html
+++ b/home.html
@@ -15,6 +15,7 @@
         <!-- header -->
         <div class="header-title w-67p w-94p">
             <div class="header">
+                <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2023web-camp/logo.png?raw=true" alt="logo">
                 <ul class="menu-web">
                    <a href="home.html"><li>首頁</li></a>
                    <a href="pricing.html"><li>定價</li></a>
