--- a/pricing.html
+++ b/pricing.html
@@ -18,7 +18,7 @@
             <div class="header">
                 <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2023web-camp/logo.png?raw=true" alt="logo">
                 <ul class="menu-web">
-                    <a href="home.html"><li>首頁</li></a>
+                    <a href="index.html"><li>首頁</li></a>
                     <a href="pricing.html"><li>定價</li></a>
                 </ul>
                 <button class="visible-sm" id="menuIcon">
@@ -33,7 +33,7 @@
                 <div class="menu-mobile">
                     <div class="m-m-menu border-top">
                         <ul>
-                            <li><a href="home.html">首頁</a></li>
+                            <li><a href="index.html">首頁</a></li>
                             <li><a href="pricing.html">定價</a></li>
                         </ul>
                     </div>
@@ -462,7 +462,7 @@
         <div class="w-67p w-94p">
             <div class="footer-top border-top flex-jcsb">
                 <ul>
-                    <a href="home.html"><li>首頁</li></a>
+                    <a href="index.html"><li>首頁</li></a>
                     <a href="pricing.html"><li>定價</li></a>
                 </ul>
                 <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2023web-camp/logo.png?raw=true" alt="logo">
